--- a/app/Resources/views/universe/show.html.twig
+++ b/app/Resources/views/universe/show.html.twig
@@ -6,10 +6,6 @@
     <table>
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ universe.id }}</td>
-            </tr>
-            <tr>
                 <th>Place</th>
                 <td>{{ universe.place }}</td>
             </tr>
@@ -23,7 +19,7 @@
             </tr>
             <tr>
                 <th>Image</th>
-                <td>{{ universe.image }}</td>
+                <td><img src="{{ universe.image }}"></td>
             </tr>
         </tbody>
     </table>
