--- a/app/Resources/views/team/index.html.twig
+++ b/app/Resources/views/team/index.html.twig
@@ -6,7 +6,6 @@
     <table>
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Name</th>
                 <th>Image</th>
                 <th>Actions</th>
@@ -15,9 +14,8 @@
         <tbody>
         {% for team in teams %}
             <tr>
-                <td><a href="{{ path('team_show', { 'id': team.id }) }}">{{ team.id }}</a></td>
                 <td>{{ team.name }}</td>
-                <td>{{ team.image }}</td>
+                <td><img src="{{ team.image }}"></td>
                 <td>
                     <ul>
                         <li>
