--- a/app/Resources/views/team/show.html.twig
+++ b/app/Resources/views/team/show.html.twig
@@ -6,16 +6,12 @@
     <table>
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ team.id }}</td>
-            </tr>
-            <tr>
                 <th>Name</th>
                 <td>{{ team.name }}</td>
             </tr>
             <tr>
                 <th>Image</th>
-                <td>{{ team.image }}</td>
+                <td><img src="{{ team.image }}"></td>
             </tr>
         </tbody>
     </table>
