--- a/app/Resources/views/player/show.html.twig
+++ b/app/Resources/views/player/show.html.twig
@@ -18,6 +18,14 @@
                 <td>{{ player.description }}</td>
             </tr>
             <tr>
+                <th>Team</th>
+                <td>{{ player.team }}</td>
+            </tr>
+            <tr>
+                <th>Universe</th>
+                <td>{{ player.universe }}</td>
+            </tr>
+            <tr>
                 <th>Image</th>
                 <td><img src="{{ player.image }}"></td>
             </tr>
