--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,12 +6,14 @@
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/jquery.bracket.min.css') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
             <script src="{{ asset('js/jquery-slim.min.js') }}"></script>
             <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+            <script src="{{ asset('js/jquery.bracket.min.js') }}"></script>
         {% endblock %}
     </body>
 </html>
