--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,16 +2,61 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% stylesheets
+            'css/bootstrap.min.css'
+            'css/animate.css'
+            'css/owl.carousel.min.css'
+            'css/style.css'
+            filter='cssrewrite' output='css/compiled/app.css' %}
+            <link rel="stylesheet" href="{{ asset_url }}" />
+        {% endstylesheets %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
+
     </head>
     <body>
+    <header role="banner">
+
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <div class="container">
+                <a class="navbar-brand absolute" href="/">Olympique Universe</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse navbar-light" id="navbarsExample05">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/team">Equipes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/tournament">Tournois</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/classement">Classement</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- END header -->
         {% block body %}{% endblock %}
-        {% block javascripts %}
-            <script src="{{ asset('js/jquery-slim.min.js') }}"></script>
-            <script src="{{ asset('js/bootstrap.min.js') }}"></script>
-        {% endblock %}
+        {% javascripts
+            'js/jquery-slim.min.js'
+            'js/bootstrap.min.js'
+            'jquery.stellar.min.js'
+            'jquery.waypoints.min.js'
+            'main.js'
+            'owl.carousel.min.js'
+            'popper.min.js'
+            output='js/compiled/app.js' %}
+            <script src="{{ asset_url }}"></script>
+        {% endjavascripts %}
     </body>
 </html>
