--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,22 +1,53 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div id="wrapper">
-        <div id="container">
-            <h1>Routes disponibles :</h1>
-            <ul>
-                <li>
-                    <a href="{{ path('player_index') }}">Voir les joueurs</a>
-                </li>
-                <li>
-                    <a href="{{ path('team_index') }}">Voir les équipes</a>
-                </li>
-                <li>
-                    <a href="{{ path('universe_index') }}">Voir les univers</a>
-                </li>
-            </ul>
+    <header role="banner">
+
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <div class="container">
+                <a class="navbar-brand absolute" href="/">Olympique Universe</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse navbar-light" id="navbarsExample05">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/team">Equipes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/tournament">Tournois</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/classement">Classement</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- END header -->
+
+    <section class="site-hero overlay" data-stellar-background-ratio="0.5" style="background-image: url(http://www.premiere.fr/sites/default/files/styles/premiere_article/public/thumbnails/image/avengers_infinity_war_3.jpg);">
+        <div class="container">
+            <div class="row align-items-center site-hero-inner justify-content-center">
+                <div class="col-md-8 text-center">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-4 col-md-offset-4">
+                                <img style=" max-width: 610px; opacity: 0.8" src="http://fracademic.com/pictures/frwiki/79/Olympic_rings.svg"/>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
 {% endblock %}
 
 {% block stylesheets %}
