--- a/app/Resources/views/team/index.html.twig
+++ b/app/Resources/views/team/index.html.twig
@@ -23,7 +23,7 @@
         </div>
         <div class="container">
             <div class="row justify-content-center">
-                <button class="btn btn-primary"><a class="create" {{ path('team_new') }}">Créer une équipe</a></button>
+                <a href="{{ path('team_new') }}" class="btn btn-primary create" >Créer une équipe</a>
             </div>
         </div>
     </section>
