--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,17 +3,26 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% stylesheets
+            'css/jquery.bracket.min.css'
+            'css/bootstrap.min.css'
+
+            filter='cssrewrite' output='css/compiled/app.css' %}
+            <link rel="stylesheet" href="{{ asset_url }}" />
+        {% endstylesheets %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ asset('css/jquery.bracket.min.css') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}
-            <script src="{{ asset('js/jquery-slim.min.js') }}"></script>
-            <script src="{{ asset('js/bootstrap.min.js') }}"></script>
-            <script src="{{ asset('js/jquery.bracket.min.js') }}"></script>
-        {% endblock %}
+            {% javascripts
+                'js/bootstrap.min.js'
+                'js/jquery-slim.min.js'
+                'js/tournament.js'
+                'js/jquery.bracket.min.js'
+                output='js/compiled/app.js' %}
+                <script src="{{ asset_url }}"></script>
+            {% endjavascripts %}
     </body>
 </html>
