--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -19,7 +19,7 @@
                             <a class="nav-link" href="/team">Equipes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/tournament">Tournois</a>
+                            <a class="nav-link" href="/game">Tournois</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/classement">Classement</a>
