--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,10 +37,7 @@
                             <a class="nav-link" href="/team">Equipes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/tournament">Tournois</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/classement">Classement</a>
+                            <a class="nav-link" href="/game">Tournois</a>
                         </li>
                     </ul>
                 </div>
