--- a/app/Resources/views/team/edit.html.twig
+++ b/app/Resources/views/team/edit.html.twig
@@ -1,21 +1,36 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Team edit</h1>
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('team_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <section class="site-section bg-light" style="background-image: url(https://i.pinimg.com/originals/e9/34/e9/e934e98cc8a4680ff43ace1910055565.jpg);">
+        <div class="container view">
+            <h2 class="align">Modifier une Equipe</h2>
+            {{ form_start(edit_form) }}
+            <div class="row">
+                <div class="col-md-12 pad">
+                    {{ form_label(edit_form.name, 'Nom') }}
+                    {{ form_widget(edit_form.name, { 'attr': {'class': 'form-control'} }) }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 pad">
+                    {{ form_label(edit_form.image, 'Image')}}
+                    {{ form_widget(edit_form.image, { 'attr': {'class': 'form-control'} }) }}
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-12 center1">
+                    <input type="submit" class="btn btn-primary create top" value="Modifier" />
+                </div>
+            </div>
+            {{ form_end(edit_form) }}
+            <div class="row">
+                <div class="col-md-12 center1">
+                    <a href="{{ path('team_index') }}">Retour a la liste</a>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
+
