Adding hackaton2.sql and adding a link to display the players in the navbar.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,6 +37,9 @@
                             <a class="nav-link" href="/team">Equipes</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/player">Liste des Joueurs</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/game">Tournois</a>
                         </li>
                     </ul>
