--- a/app/Resources/views/player/index.html.twig
+++ b/app/Resources/views/player/index.html.twig
@@ -13,8 +13,9 @@
                     <div class=" center col-lg-3 col-md-6 col-sm-6 col-6">
                         <h2 class="white">{{ player.name }}</h2>
                         <img class="course" src="{{ player.image }}" alt="Player"><br>
-                        <p>{{ player.gender }}</p><br>
-                        <p>{{ player.universe }}</p><br>
+                        <p>Genre : {{ player.gender }}</p>
+                        <p>Univers : {{ player.universe }}</p>
+                        <p>Equipe : {{ player.team }}</p>
                         <a class=" btn btn-primary place create" href="{{ path('player_edit', { 'id': player.id }) }}">Modifier</a>
                     </div>
                 {% endfor %}
@@ -26,5 +27,11 @@
                 <a href="{{ path('player_new') }}" class="btn btn-primary create top" >Créer un joueur</a>
             </div>
         </div>
+
+        <ul>
+            <li>
+                <a href="{{ path('player_index') }}">Retour à l'accueil</a>
+            </li>
+        </ul>
     </section>
 {% endblock %}
