--- a/app/Resources/views/team/edit.html.twig
+++ b/app/Resources/views/team/edit.html.twig
@@ -27,7 +27,7 @@
             {{ form_end(edit_form) }}
             <div class="row">
                 <div class="col-md-12 center1">
-                    <a href="{{ path('team_index') }}">Retour a la liste</a>
+                    <a href="{{ path('team_index') }}">Retour à la liste</a>
                 </div>
             </div>
         </div>
