--- a/app/Resources/views/game/index.html.twig
+++ b/app/Resources/views/game/index.html.twig
@@ -1,27 +1,28 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Les équipes</h1>
 
-    <section>
+    <section class="site-section" style="background-image: url(https://i.kinja-img.com/gawker-media/image/upload/s--BH6eNSH0--/c_scale,f_auto,fl_progressive,q_80,w_800/qu6ducpqv5flsmuo71g5.png);">
         <div id="big">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h3>Que les jeux commencent !</h3>
+                <div class="row justify-content-center">
+                    <div class="col-md-12 text-center pad">
+                        <h2>Tournois</h2>
                     </div>
-                    <div class="col-md-12">
+                    <br>
+                    <br>
+                    <div class="col-md-12 text-center">
                         <div class="demo">
-                            <div class="jQBracket lr" style="width: 1000px;">
+                            <div class="jQBracket lr" style="width: 1200px;">
                                 <div class="bracket" style="height: 520px;">
-                                    <div class="round" style="width: 200px; margin-right: 40px">
+                                    <div class="round" style="width: 400px; margin-right: 40px">
                                         <div class="match" style="height: 65px;">
                                             <div class="teamContainer" style="top: 10px;">
                                                 <div class="team lose" style="width: 200px;" data-teamid="0">
-                                                    <div class="label" style="width: 70px;"></div>
+                                                    <div class="label" style="width: 200px;"></div>
                                                     <div class="score" style="width: 30px;" data-resultid="result-1"></div>
                                                 </div>
-                                                <div class="team win" style="width: 200px;" data-teamid="1">
+                                                <div class="team win" style="width: 300px;" data-teamid="1">
                                                     <div class="label" style="width: 70px;"></div>
                                                     <div class="score" style="width: 30px;" data-resultid="result-2"></div>
                                                 </div>
@@ -249,6 +250,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-12 center1">
+                        <a href="{{ path('game_index') }}" class="btn btn-primary create top" >Let's The Tournament BEGIIIINNNNNNN!!!</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -276,7 +282,7 @@
                 [[3,1], [2,4], [6,3], [2,3], [1,5], [5,3], [7,2], [1,2]],
                 [[1,2], [3,4], [5,6], [7,8]],
                 [[0,1], [8,2]],
-                [[1,3]]
+                [[3,1]]
             ]]
         };
 
