--- a/app/Resources/views/game/index.html.twig
+++ b/app/Resources/views/game/index.html.twig
@@ -279,10 +279,10 @@
             teams : bddteams,
 
             results : [[  /*WINNER BRACKET */
-                [[3,1], [2,4], [6,3], [2,3], [1,5], [5,3], [7,2], [1,2]],
-                [[1,2], [3,4], [5,6], [7,8]],
-                [[0,1], [8,2]],
-                [[3,1]]
+                [[Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ]],
+                [[Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ]],
+                [[Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ], [Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ]],
+                [[Math.floor(Math.random() * 10) + 1 ,Math.floor(Math.random() * 10) + 1 ]]
             ]]
         };
 
