--- a/app/Resources/views/game/index.html.twig
+++ b/app/Resources/views/game/index.html.twig
@@ -68,7 +68,7 @@
                                                     <div class="score" style="width: 30px;" data-resultid="result-7"></div>
                                                 </div>
                                                 <div class="team win" style="width: 200px;" data-teamid="7">
-                                                    <div class="label" style="width: 70px;">Team 8</div>
+                                                    <div class="label" style="width: 70px;"></div>
                                                     <div class="score" style="width: 30px;" data-resultid="result-8"></div>
                                                 </div>
                                                 <div class="connector" style="height: 32.5px; width: 20px; right: -22px; bottom: 10.25px; border-top: none;">
@@ -80,7 +80,7 @@
                                             <div class="teamContainer" style="top: 10px;">
                                                 <div class="team lose" style="width: 200px;" data-teamid="8">
                                                     <div class="label" style="width: 70px;"></div>
-                                                    <div class="score" style="width: 30px;" data-resultid="result-9">1</div>
+                                                    <div class="score" style="width: 30px;" data-resultid="result-9"></div>
                                                 </div>
                                                 <div class="team win highlightLoser" style="width: 200px;" data-teamid="9">
                                                     <div class="label" style="width: 70px;"></div>
