--- a/app/Resources/views/player/edit.html.twig
+++ b/app/Resources/views/player/edit.html.twig
@@ -46,14 +46,14 @@
             </div>
             <br><br>
             <div class="row">
-                <div class="col-md-4 center1">
+                <div class="col-md-6 center1">
                     <input type="submit" class="btn btn-primary create top" value="Modifier" />
                 </div>
-                <div class="col-md-4 center1">
-                    <input type="submit" class="btn btn-primary create top" value="Retour à la liste" />
-                </div>
-                <div class="col-md-4 center1">
+                <div class="col-md-6 center1">
                     <input type="submit" class="btn btn-primary create top" value="Supprimer" />
+                </div>
+                <div class="col-md-12 center1">
+                    <a href="{{ path('team_index') }}">Retour à la liste</a>
                 </div>
             </div>
         </div>
