--- a/app/Resources/views/team/show.html.twig
+++ b/app/Resources/views/team/show.html.twig
@@ -24,6 +24,9 @@
                 <br>
                 <a href="{{ path('player_new') }}" class="btn btn-primary create top" >Créer un Joueur</a>
             </div>
+            <div class="col-md-12 center1">
+                <a href="{{ path('team_index') }}">Retour à la liste</a>
+            </div>
         </div>
     </section>
 {% endblock %}
